codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_sampling_model_switch_compaction_shapes.snap
---
source: core/tests/suite/compact.rs
assertion_line: 1817
expression: "format_labeled_requests_snapshot(\"Pre-sampling compaction on explicit model switch to a smaller context window compacts prior-turn history only (incoming user message excluded), and the follow-up request uses rebased instructions without additive <model_switch> payloads.\",\n&[(\"Initial Request (Previous Model)\", &requests[0]),\n(\"Pre-sampling Compaction Request\", &requests[1]),\n(\"Post-Compaction Follow-up Request (Next Model)\", &requests[2]),])"
---
Scenario: Pre-sampling compaction on explicit model switch to a smaller context window compacts prior-turn history only (incoming user message excluded), and the follow-up request uses rebased instructions without additive <model_switch> payloads.

## Initial Request (Previous Model)
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] - You are Architect: a high-level delivery agent focused on stru...
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:before switch

## Pre-sampling Compaction Request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] - You are Architect: a high-level delivery agent focused on stru...
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:before switch
03:message/assistant:before switch
04:message/user:<SUMMARIZATION_PROMPT>

## Post-Compaction Follow-up Request (Next Model)
00:message/user:before switch
01:message/user:<COMPACTION_SUMMARY>\nPRE_SAMPLING_SUMMARY
02:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] - You are Architect: a high-level delivery agent focused on stru...
03:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
04:message/user:after switch
